# Unihack2025

./: README.md
backend/: .example.env  .gitignore  README.md  buildProfile.py  clean_md.py  getListing.py  getProducts.py  getRecommendations.py  get_gifts.py  get_product_options.py  gift.py  main.py  note-generation.py  note_generation.py  portfolio.py  profile_1.py  pyproject.toml  state.py
backend/models/: example.py  product.py  profile.py  recommendations.py  stateRequest.py
frontend/: .example.env  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  loadingAnimationPage.tsx  notePage.tsx  page.tsx  profileSummaryPage.tsx  questionPage.tsx  researchPage.tsx  startPage.tsx  summaryPage.tsx
frontend/src/components/: Conversation.tsx  GradientButton.tsx
frontend/src/lib/: api.ts
frontend/src/models/: category.ts  dynamicVariables.ts  message.ts  product.ts  recommendation.ts  transcriptItem.ts
frontend/src/types/: profile.ts
